# Vpp

./: .gitmodules  README.md
app/: .gitignore  AudioPluginHost.exe - ショートカット.lnk  CMakeLists.txt  README.md
app/Source/: Main.cpp  MainComponent.cpp
app/VppStudio/: VppStudio.jucer
app/VppStudio/Builds/VisualStudio2022/: VppStudio.sln  VppStudio_SharedCode.vcxproj  VppStudio_SharedCode.vcxproj.filters  VppStudio_StandalonePlugin.vcxproj  VppStudio_StandalonePlugin.vcxproj.filters  VppStudio_VST3.vcxproj  VppStudio_VST3.vcxproj.filters  VppStudio_VST3ManifestHelper.vcxproj  resources.rc
app/VppStudio/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
app/VppStudio/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
app/src/: CMakeLists.txt
ml/svs/: .gitignore  Makefile  pyproject.toml
ml/svs/checkpoints/product/: checkpoint.pth
ml/svs/engine/: __init__.py  datasets_stats.py  diffuser.py  grouped_parts.py  losses.py  normalization.py  phoneme_indexes.py  predict.py  tensorboard.py  train.py
ml/svs/engine/config/: audio.py  project.py  train.py
ml/svs/engine/datasets/: vocal.py
ml/svs/engine/hifi_gan/: inference.py  inference_e2e.py  meldataset.py  models.py  train.py
ml/svs/engine/models/: diffusion_decoder.py  svs.py  temporal_blocks.py  transformer.py  vae.py
ml/svs/engine/tools/: augment_audio.py  convert_ust_to_segments.py  generate_parts.py  group_mutes_from_ust.py
ml/svs/engine/types/: config.py  dataset.py  grouped_part.py  note_segment.py  stats.py  (+2 more)
ml/svs/metadata/: dataset_stats.json  phoneme_indexes.json
(+117 files in other folders)
