[project]
name = "svs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "diffusers>=0.34.0",
    "librosa>=0.11.0",
    "matplotlib>=3.9.4",
    "pytz>=2025.2",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "tqdm>=4.67.1",
]
